python-test_driven_development/tests/5-text_indentation.txt
# testing text_indentation function

>>> text_indentation = __import__('5-text_indentation').text_indentation

>>> text_indentation("Salut, tu: vas. bien? ^^")
Salut, tu:
<BLANKLINE>
vas.
<BLANKLINE>
bien?
<BLANKLINE>
^^

>>> text_indentation(42)
Traceback (most recent call last):
TypeError: text must be a string

>>> text_indentation("Toto\n\nDupont")
Toto
<BLANKLINE>
Dupont

>>> text_indentation()
Traceback (most recent call last):
TypeError: text_indentation() missing 1 required positional argument: 'text'